--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
 <body>
     <div class="slider">
         <div class="slider__content">
-            <div class="slider__card card">
-                <div class="card-wrapper">
-                    
+            <div class="sliders__line">
+                <div class="slider__card card">
+                    <div class="card__img-content">
+                        <span class="overlay"></span>
+                        <div class="card__image-block">
+                            <img src="./img/1.jpg" alt="" class="card__image">
+                        </div>
 
+                    </div>
+
+                   <div class="card-content">
+                       <h2 class="card__name">Planet name</h2>
+                       <p class="card__description">Lorem ipsum dolor sit amet ?</p>
+                       <button class="card__button">Search</button>
+
+                   </div>
                 </div>
             </div>
 
