--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Caroosel</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="slider">
-        <div class="slider__content">
-            <div class="sliders__line">
-                <div class="slider__card card">
-                    <div class="card__img-content">
-                        <span class="overlay"></span>
-                        <div class="card__image-block">
-                            <img src="./img/1.jpg" alt="" class="card__image">
-                        </div>
-
-                    </div>
-
-                   <div class="card-content">
-                       <h2 class="card__name">Planet name</h2>
-                       <p class="card__description">Lorem ipsum dolor sit amet ?</p>
-                       <button class="card__button">Search</button>
-
-                   </div>
-                </div>
+      <div class="slider__content">
+        <div class="sliders__line">
+          <div class="slider__card card">
+            <div class="card__img-content">
+              <span class="overlay"></span>
+              <div class="card__image-block">
+                <img src="./img/1.jpg" alt="" class="card__image" />
+              </div>
             </div>
 
+            <div class="card-content">
+              <h2 class="card__name">Planet name</h2>
+              <p class="card__description">Lorem ipsum dolor sit amet ?</p>
+              <button class="card__button">More</button>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
