--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Caroosel</title>
   </head>
   <body>
-    <div class="slider">
+    <div class="slider swiper">
       <div class="slider__content">
-        <div class="sliders__line">
+        <div class="sliders__line swiper-wraper">
           <div class="slider__card card">
             <div class="card__img-content">
               <span class="overlay"></span>
@@ -27,7 +27,12 @@
           </div>
         </div>
       </div>
+
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
     </div>
+    <script src="swipper-bundle.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
